# reclaude

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
scripts/: gen-icon.mjs  install.mjs  screenshot.mjs  smoke.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  build.rs  reclaude.manifest.xml  tauri.conf.json
src-tauri/src/: exec.rs  lib.rs  logic.rs  main.rs  plan.rs
src-tauri/tests/: pipeline.rs
