[package]
name = "reclaude"
version = "1.0.0"
description = "Rename Claude Code project folders without losing chat history"
edition = "2021"

[lib]
name = "reclaude"
path = "src/lib.rs"

[[bin]]
name = "Reclaude"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = true
